--- a/test/Kestrel.Core.Tests/Kestrel.Core.Tests.csproj
+++ b/test/Kestrel.Core.Tests/Kestrel.Core.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines.Testing" Version="0.1.0-e171006-1" />
+    <PackageReference Include="System.IO.Pipelines.Testing" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Microsoft.AspNetCore.Testing" />
     <PackageReference Include="Microsoft.AspNetCore.Http" />
